--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@gluestack-ui/core": "^3.0.12",
     "@gluestack-ui/utils": "^3.0.13",
     "@legendapp/motion": "^2.5.3",
+    "@react-native-community/datetimepicker": "^8.5.1",
     "@react-native/new-app-screen": "0.83.0",
     "@react-navigation/bottom-tabs": "^7.9.0",
     "@react-navigation/native": "^7.1.26",
